welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: Missing closing brace `}' assumed here
var fini: booléenne = false
^BDRBuggle:3: error: expected class or object definition
while (fini = false){
^BDRBuggle:5: error: Missing closing brace `}' assumed here
	litMessage():String
        ^BDRBuggle:11: error: Missing closing brace `}' assumed here
	if (litMessage=="I"){
        ^BDRBuggle:13: error: Missing closing brace `}' assumed here
	if (litMessage=="A"){
        ^BDRBuggle:15: error: Missing closing brace `}' assumed here
	if (litMessage=="B"){
        ^BDRBuggle:17: error: Missing closing brace `}' assumed here
	if (litMessage=="C"){
        ^